<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asking"
        android:textColor="@color/white"
        android:fontFamily="@font/amidongrotesk"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="20sp"
            app:backgroundTint="@null"
            android:layout_margin="10dp"
            android:background="@drawable/bg_main_button"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yes"
            android:layout_margin="10dp"
            app:backgroundTint="@null"
            android:background="@drawable/bg_main_button"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>