<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameActivity"
    android:background="@drawable/bg_game">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/bg_game">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_score"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/amidongrotesk"/>
            <TextView
                android:id="@+id/tvCurrentScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_score"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/amidongrotesk"/>
            <TextView
                android:id="@+id/tvHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">
            <Button
                android:id="@+id/btnRestart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_lang_button"
                android:text="@string/restart"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/amidongrotesk"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <com.coder.behzod.tetris.view.TetrisView
            android:id="@+id/tetrisView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>